products/sektor-btp/deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nafura-sektor
  labels:
    nafura.io/app: sektor-btp
