products/sektor-btp/deploy/k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sektor-btp-backend
spec:
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: sektor-btp-backend
