products/sektor-btp/deploy/k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sektor-btp-web
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: sektor-btp-web
